--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,7 +6,34 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+    type: trojan
+    server: 23.227.38.11
+    port: 443
+    udp: true
+    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
+    sni: syndication-statutes-wanted-logo.trycloudflare.com
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /argox-tr
+  - &id002
+    name: 🇨🇦_CA_加拿大_1
+    type: vmess
+    server: 108.181.23.161
+    port: 8080
+    cipher: auto
+    uuid: 969f1909-c0d3-4c30-813d-3aec5c838b7d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /1IKYjV0r/
+      headers:
+        host: internet.life.com.by
+  - &id003
+    name: 🇺🇸_US_美国_1
     type: vmess
     server: 104.18.202.250
     port: 2082
@@ -20,128 +47,75 @@ proxies:
       path: /nina.bond/linkvws
       headers:
         host: erfannewfreenodes.vdmmswyzmzigonvnjk443.workers.dev
-  - &id002
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 104.21.225.9
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: a.prapt4.ir
-  - &id003
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: russia.com
-    port: 8880
-    cipher: auto
-    uuid: 6658a3a6-225a-4d33-a5d2-82cfde565b4e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
   - &id004
-    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
+    name: 🇨🇦_CA_加拿大_2
     type: vmess
-    server: 94.140.0.110
-    port: 8880
+    server: 134.122.41.160
+    port: 3389
     cipher: auto
-    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: food.zhaal.ir
+    network: http
   - &id005
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_1
+    name: 🇫🇷_FR_法国_1
+    type: trojan
+    server: 15.188.94.128
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.miwan.co.uk
+    skip-cert-verify: false
+    network: tcp
+  - &id006
+    name: 🇺🇸_US_美国_2
+    type: trojan
+    server: 3.17.106.39
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trojan.burgerip.co.uk
+    skip-cert-verify: false
+    network: tcp
+  - &id007
+    name: 🇱🇺_LU_卢森堡_1
     type: vmess
-    server: 23.227.38.22
-    port: 8080
+    server: 78.111.102.232
+    port: 3389
     cipher: auto
-    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
-      headers:
-        host: per-essex-patterns-bowling.trycloudflare.com
-  - &id006
+    network: http
+  - &id008
+    name: 🇬🇧_GB_英国
+    type: trojan
+    server: 13.43.105.161
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.burgerip.co.uk
+    skip-cert-verify: false
+    network: tcp
+  - &id009
     name: 🇺🇸_US_美国_3
     type: vmess
-    server: 104.16.234.190
-    port: 2086
-    cipher: auto
-    uuid: 3d840eb7-9400-4caf-a511-e4724a003ec4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/Z7qdcrAGRw
-      headers:
-        host: us77SmSk86j.fzbqfrse.xyz
-  - &id007
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 162.159.134.23
+    server: 162.159.130.208
     port: 8080
     cipher: auto
-    uuid: 9b196b50-37f2-4f4b-b175-06273adc6207
+    uuid: 55021a7c-bd6c-418e-be95-ceac8ba27b45
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 9b196b50-37f2-4f4b-b175-06273adc6207-vm
+      path: 55021a7c-bd6c-418e-be95-ceac8ba27b45-vm
       headers:
-        host: championship-bidding-oxygen-brochure.trycloudflare.com
-  - &id008
-    name: 🇹🇼_TW_台湾->🇭🇰_HK_香港
-    type: vmess
-    server: 118.163.101.44
-    port: 44332
-    cipher: auto
-    uuid: 5840ab2d-ab59-4eb0-9dea-122d0fbbd2d9
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: cfhk.393930.xyz
-  - &id009
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: yh2.dtku41.xyz
-    port: 8080
-    cipher: auto
-    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
-      headers:
-        host: per-essex-patterns-bowling.trycloudflare.com
+        host: widescreen-instruction-breakdown-postage.trycloudflare.com
   - &id010
-    name: 🇺🇸_US_美国_6
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: 162.159.137.249
     port: 8080
@@ -156,79 +130,18 @@ proxies:
       headers:
         host: nest-emily-healing-h.trycloudflare.com
   - &id011
-    name: 🇺🇸_US_美国_7
+    name: 🇱🇺_LU_卢森堡_2
     type: vmess
-    server: yh3.freeh1.xyz
-    port: 8080
+    server: 45.82.31.164
+    port: 3389
     cipher: auto
-    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
-      headers:
-        host: larger-marketing-amounts-skin.trycloudflare.com
+    network: http
   - &id012
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 2086
-    cipher: auto
-    uuid: 3d840eb7-9400-4caf-a511-e4724a003ec4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/Z7qdcrAGRw
-      headers:
-        host: us77SmSk86j.fzbqfrse.xyz
-  - &id013
-    name: 🇨🇦_CA_加拿大_1
-    type: vmess
-    server: 23.227.38.23
-    port: 8080
-    cipher: auto
-    uuid: 34c0bb5e-c120-432d-9c58-bd7d82c7397b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 34c0bb5e-c120-432d-9c58-bd7d82c7397b-vm
-      headers:
-        host: uh-lawyers-instruments-kernel.trycloudflare.com
-  - &id014
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: russia.com
-    port: 2095
-    cipher: auto
-    uuid: 6658a3a6-225a-4d33-a5d2-82cfde565b4e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id015
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_2
-    type: trojan
-    server: 23.227.38.11
-    port: 443
-    udp: true
-    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
-    sni: syndication-statutes-wanted-logo.trycloudflare.com
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /argox-tr
-  - &id016
-    name: 🇺🇸_US_美国_10
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: 104.26.4.57
     port: 2095
@@ -242,10 +155,10 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: ssrsub.v03.ssrsub.com
-  - &id017
-    name: 🇨🇦_CA_加拿大_2
+  - &id013
+    name: 🇫🇷_FR_法国_2
     type: vmess
-    server: 134.122.41.160
+    server: 51.159.155.52
     port: 3389
     cipher: auto
     uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
@@ -253,10 +166,25 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
-  - &id018
-    name: 🇺🇸_US_美国_11
+  - &id014
+    name: 🇦🇪_AE_阿联酋->🇫🇷_FR_法国
     type: vmess
-    server: 104.26.5.57
+    server: 94.140.0.110
+    port: 8880
+    cipher: auto
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: food.zhaal.ir
+  - &id015
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: russia.com
     port: 2095
     cipher: auto
     uuid: 6658a3a6-225a-4d33-a5d2-82cfde565b4e
@@ -309,9 +237,6 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
-      - *id016
-      - *id017
-      - *id018
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -332,9 +257,6 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
-      - *id016
-      - *id017
-      - *id018
   - name: SELECT
     type: select
     proxies:
@@ -353,9 +275,6 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
-      - *id016
-      - *id017
-      - *id018
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
