--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -36,18 +36,66 @@ proxies:
       headers:
         host: admin.arzonhost.ir
   - &id003
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
-    type: trojan
-    server: 23.227.38.11
-    port: 443
-    udp: true
-    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
-    sni: syndication-statutes-wanted-logo.trycloudflare.com
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+    type: vmess
+    server: mizban.arzonhost.ir
+    port: 2086
+    cipher: auto
+    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /argox-tr
+      path: /
+      headers:
+        host: mizban.arzonhost.ir
   - &id004
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 172.67.152.170
+    port: 2052
+    cipher: auto
+    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mahilu.site
+  - &id005
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 104.21.82.39
+    port: 2052
+    cipher: auto
+    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mahilu.site
+  - &id006
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 172.67.166.192
+    port: 80
+    cipher: auto
+    uuid: cd1db809-2de0-409c-aef5-861e95eff53e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: ua1-vmess.sshmax.xyz
+  - &id007
     name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
     server: 94.140.0.110
@@ -62,34 +110,70 @@ proxies:
       path: /
       headers:
         host: food.zhaal.ir
-  - &id005
-    name: 🇱🇺_LU_卢森堡
+  - &id008
+    name: 🇺🇸_US_美国_4
     type: vmess
-    server: 78.111.102.232
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id006
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: russia.com
+    server: 172.67.116.48
     port: 80
     cipher: auto
-    uuid: bd8c41a8-7598-4c28-9965-522545e14892
+    uuid: 22a13aa2-4854-44cb-e090-ec71ab84b1ff
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
+      path: /
       headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id007
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+        host: wap.hostmjj.com
+  - &id009
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+    type: trojan
+    server: 23.227.38.11
+    port: 443
+    udp: true
+    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
+    sni: syndication-statutes-wanted-logo.trycloudflare.com
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /argox-tr
+  - &id010
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 18.237.116.67
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id011
+    name: 🇺🇸_US_美国_6
+    type: ss
+    server: 54.202.195.163
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id012
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: 34.216.106.166
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id013
+    name: 🇺🇸_US_美国_8
+    type: ss
+    server: 35.87.1.148
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id014
+    name: 🇺🇸_US_美国_9
+    type: ss
+    server: 35.89.8.123
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id015
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
     type: vmess
     server: cdn.vds-server.ir
     port: 8880
@@ -103,10 +187,97 @@ proxies:
       path: /
       headers:
         host: cdn.vds-server.ir
-  - &id008
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
+  - &id016
+    name: 🇺🇸_US_美国_10
     type: vmess
-    server: mizban.arzonhost.ir
+    server: russia.com
+    port: 80
+    cipher: auto
+    uuid: bd8c41a8-7598-4c28-9965-522545e14892
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id017
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: fbi.gov
+    port: 8080
+    cipher: auto
+    uuid: ef8c954e-014f-4b36-8273-9b5086afab34
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: ef8c954e-014f-4b36-8273-9b5086afab34-vm
+      headers:
+        host: bibliographic-sword-sequence-advertisers.trycloudflare.com
+  - &id018
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: yh1.dtku41.xyz
+    port: 8080
+    cipher: auto
+    uuid: 9b196b50-37f2-4f4b-b175-06273adc6207
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 9b196b50-37f2-4f4b-b175-06273adc6207-vm
+      headers:
+        host: technological-mel-fill-decide.trycloudflare.com
+  - &id019
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: cdn2_de.majutsu.top
+    port: 443
+    cipher: auto
+    uuid: 61abbe9b-ac90-4dcc-99de-35e17f0ce847
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /acc
+      headers:
+        host: cdn2_de.majutsu.top
+  - &id020
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: 172.67.204.84
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
+  - &id021
+    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
+    type: vmess
+    server: mahilu.site
+    port: 2052
+    cipher: auto
+    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mahilu.site
+  - &id022
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: index.zhaal.ir
     port: 2086
     cipher: auto
     uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
@@ -117,65 +288,35 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mizban.arzonhost.ir
-  - &id009
-    name: 🇸🇬_SG_新加坡->🇫🇷_FR_法国
-    type: vmess
-    server: 8.222.174.108
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
+        host: index.zhaal.ir
+  - &id023
+    name: 🇺🇸_US_美国_14
+    type: trojan
+    server: 95.164.33.62
+    port: 443
+    udp: true
+    password: 0b1371aa-649d-41dc-9126-338c87936500
+    sni: sourceforge.net
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /websocket
       headers:
-        host: s1c.v2.v001sss.xyz
-  - &id010
-    name: 🇺🇸_US_美国_2
+        host: se1.trojanvpn.de
+  - &id024
+    name: 🇱🇺_LU_卢森堡
     type: vmess
-    server: 505.outline-vpn.cloud
-    port: 443
+    server: 91.199.82.78
+    port: 8080
     cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    uuid: bdd22841-c4d2-4aa8-acf2-95aa9125f159
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: kellie.makeup
-    network: ws
-    ws-opts:
-      path: /linkvws
-      headers:
-        host: kellie.makeup
-  - &id011
-    name: 🇫🇷_FR_法国
-    type: trojan
-    server: 13.38.167.222
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trojan.burgerip.co.uk
-    skip-cert-verify: true
-    network: tcp
-    alpn:
-      - http/1.1
-  - &id012
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
-    type: vmess
-    server: s1c.v2.v001sss.xyz
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
+    servername: usma-12.trollfunny.net
     network: ws
     ws-opts:
       path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -214,6 +355,18 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -231,6 +384,18 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
   - name: SELECT
     type: select
     proxies:
@@ -246,6 +411,18 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
